--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+	"version": "0.1.0",
 	"name": "fcc-learn-npm-package-json",
 	"author": "Esteban Carrillo",
 	"description": "Managing packages with npm",
+	"keywords": [ "freecodecamp", "node", "npm" ],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
